@@ -26,7 +26,7 @@ import java.net.HttpURLConnection;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 
-import org.apache.commons.io.IOUtils;
+// IOUtils removed - using Java standard library
 import org.sitenetsoft.olinguito.client.api.ODataClient;
 import org.sitenetsoft.olinguito.commons.api.http.HttpHeader;
 import org.sitenetsoft.olinguito.commons.api.http.HttpMethod;
@@ -54,7 +54,7 @@ public class BasicBoundFunctionITCase extends AbstractBaseTestITCase {
         +  "\"PropertyString\":\"TEST A\","
         +  "\"AdditionalPropertyString_5\":\"TEST A 0815\","
         +  "\"AdditionalPropertyString_6\":\"TEST B 0815\"";
-    String content = IOUtils.toString(connection.getInputStream(), StandardCharsets.UTF_8);
+    String content = new String(connection.getInputStream().readAllBytes(), StandardCharsets.UTF_8);
     assertTrue(content.contains(expected));
     connection.disconnect();
   }
@@ -89,7 +89,7 @@ public class BasicBoundFunctionITCase extends AbstractBaseTestITCase {
         +             "\"PropertyInt64\":9223372036854775807,"
         +             "\"PropertySByte\":127,"
         +             "\"PropertyTimeOfDay\":\"21:05:59\"";
-    String content = IOUtils.toString(connection.getInputStream(), StandardCharsets.UTF_8);
+    String content = new String(connection.getInputStream().readAllBytes(), StandardCharsets.UTF_8);
     assertTrue(content.contains(expected));
     connection.disconnect();
   }
@@ -104,7 +104,7 @@ public class BasicBoundFunctionITCase extends AbstractBaseTestITCase {
     connection.connect();
 
     assertEquals(HttpStatusCode.OK.getStatusCode(), connection.getResponseCode());
-    String content = IOUtils.toString(connection.getInputStream(), StandardCharsets.UTF_8);
+    String content = new String(connection.getInputStream().readAllBytes(), StandardCharsets.UTF_8);
     assertNotNull(content);
     connection.disconnect();
   }
@@ -120,7 +120,7 @@ public class BasicBoundFunctionITCase extends AbstractBaseTestITCase {
     connection.connect();
 
     assertEquals(HttpStatusCode.OK.getStatusCode(), connection.getResponseCode());
-    String content = IOUtils.toString(connection.getInputStream(), StandardCharsets.UTF_8);
+    String content = new String(connection.getInputStream().readAllBytes(), StandardCharsets.UTF_8);
     assertNotNull(content);
     connection.disconnect();
   }
@@ -135,7 +135,7 @@ public class BasicBoundFunctionITCase extends AbstractBaseTestITCase {
     connection.connect();
 
     assertEquals(HttpStatusCode.OK.getStatusCode(), connection.getResponseCode());
-    String content = IOUtils.toString(connection.getInputStream(), StandardCharsets.UTF_8);
+    String content = new String(connection.getInputStream().readAllBytes(), StandardCharsets.UTF_8);
     assertNotNull(content);
     connection.disconnect();
   }
@@ -152,7 +152,7 @@ public class BasicBoundFunctionITCase extends AbstractBaseTestITCase {
     connection.connect();
 
     assertEquals(HttpStatusCode.OK.getStatusCode(), connection.getResponseCode());
-    String content = IOUtils.toString(connection.getInputStream(), StandardCharsets.UTF_8);
+    String content = new String(connection.getInputStream().readAllBytes(), StandardCharsets.UTF_8);
     assertNotNull(content);
     connection.disconnect();
   }
@@ -168,7 +168,7 @@ public class BasicBoundFunctionITCase extends AbstractBaseTestITCase {
     connection.connect();
 
     assertEquals(HttpStatusCode.OK.getStatusCode(), connection.getResponseCode());
-    String content = IOUtils.toString(connection.getInputStream(), StandardCharsets.UTF_8);
+    String content = new String(connection.getInputStream().readAllBytes(), StandardCharsets.UTF_8);
     assertNotNull(content);
     connection.disconnect();
   }
@@ -184,7 +184,7 @@ public class BasicBoundFunctionITCase extends AbstractBaseTestITCase {
     connection.connect();
 
     assertEquals(HttpStatusCode.OK.getStatusCode(), connection.getResponseCode());
-    String content = IOUtils.toString(connection.getInputStream(), StandardCharsets.UTF_8);
+    String content = new String(connection.getInputStream().readAllBytes(), StandardCharsets.UTF_8);
     assertNotNull(content);
     connection.disconnect();
   }
@@ -200,7 +200,7 @@ public class BasicBoundFunctionITCase extends AbstractBaseTestITCase {
     connection.connect();
 
     assertEquals(HttpStatusCode.OK.getStatusCode(), connection.getResponseCode());
-    String content = IOUtils.toString(connection.getInputStream(), StandardCharsets.UTF_8);
+    String content = new String(connection.getInputStream().readAllBytes(), StandardCharsets.UTF_8);
     assertNotNull(content);
     connection.disconnect();
   }
@@ -216,7 +216,7 @@ public class BasicBoundFunctionITCase extends AbstractBaseTestITCase {
     connection.connect();
 
     assertEquals(HttpStatusCode.OK.getStatusCode(), connection.getResponseCode());
-    String content = IOUtils.toString(connection.getInputStream(), StandardCharsets.UTF_8);
+    String content = new String(connection.getInputStream().readAllBytes(), StandardCharsets.UTF_8);
     assertNotNull(content);
     connection.disconnect();
   }
@@ -232,7 +232,7 @@ public class BasicBoundFunctionITCase extends AbstractBaseTestITCase {
     connection.connect();
 
     assertEquals(HttpStatusCode.OK.getStatusCode(), connection.getResponseCode());
-    String content = IOUtils.toString(connection.getInputStream(), StandardCharsets.UTF_8);
+    String content = new String(connection.getInputStream().readAllBytes(), StandardCharsets.UTF_8);
     assertNotNull(content);
     connection.disconnect();
   }
@@ -247,7 +247,7 @@ public class BasicBoundFunctionITCase extends AbstractBaseTestITCase {
     connection.connect();
 
     assertEquals(HttpStatusCode.OK.getStatusCode(), connection.getResponseCode());
-    String content = IOUtils.toString(connection.getInputStream(), StandardCharsets.UTF_8);
+    String content = new String(connection.getInputStream().readAllBytes(), StandardCharsets.UTF_8);
     assertNotNull(content);
     connection.disconnect();
   }
@@ -263,7 +263,7 @@ public class BasicBoundFunctionITCase extends AbstractBaseTestITCase {
     connection.connect();
 
     assertEquals(HttpStatusCode.OK.getStatusCode(), connection.getResponseCode());
-    String content = IOUtils.toString(connection.getInputStream(), StandardCharsets.UTF_8);
+    String content = new String(connection.getInputStream().readAllBytes(), StandardCharsets.UTF_8);
     assertNotNull(content);
     connection.disconnect();
   }
@@ -280,7 +280,7 @@ public class BasicBoundFunctionITCase extends AbstractBaseTestITCase {
     connection.connect();
 
     assertEquals(HttpStatusCode.OK.getStatusCode(), connection.getResponseCode());
-    String content = IOUtils.toString(connection.getInputStream(), StandardCharsets.UTF_8);
+    String content = new String(connection.getInputStream().readAllBytes(), StandardCharsets.UTF_8);
     assertNotNull(content);
     connection.disconnect();
   }
@@ -296,7 +296,7 @@ public class BasicBoundFunctionITCase extends AbstractBaseTestITCase {
     connection.connect();
 
     assertEquals(HttpStatusCode.OK.getStatusCode(), connection.getResponseCode());
-    String content = IOUtils.toString(connection.getInputStream(), StandardCharsets.UTF_8);
+    String content = new String(connection.getInputStream().readAllBytes(), StandardCharsets.UTF_8);
     assertNotNull(content);
     connection.disconnect();
   }
@@ -312,7 +312,7 @@ public class BasicBoundFunctionITCase extends AbstractBaseTestITCase {
     connection.connect();
 
     assertEquals(HttpStatusCode.OK.getStatusCode(), connection.getResponseCode());
-    String content = IOUtils.toString(connection.getInputStream(), StandardCharsets.UTF_8);
+    String content = new String(connection.getInputStream().readAllBytes(), StandardCharsets.UTF_8);
     assertNotNull(content);
     connection.disconnect();
   }
@@ -328,7 +328,7 @@ public class BasicBoundFunctionITCase extends AbstractBaseTestITCase {
     connection.connect();
 
     assertEquals(HttpStatusCode.OK.getStatusCode(), connection.getResponseCode());
-    String content = IOUtils.toString(connection.getInputStream(), StandardCharsets.UTF_8);
+    String content = new String(connection.getInputStream().readAllBytes(), StandardCharsets.UTF_8);
     assertNotNull(content);
     connection.disconnect();
   }
@@ -343,7 +343,7 @@ public class BasicBoundFunctionITCase extends AbstractBaseTestITCase {
     connection.connect();
 
     assertEquals(HttpStatusCode.OK.getStatusCode(), connection.getResponseCode());
-    String content = IOUtils.toString(connection.getInputStream(), StandardCharsets.UTF_8);
+    String content = new String(connection.getInputStream().readAllBytes(), StandardCharsets.UTF_8);
     assertNotNull(content);
     connection.disconnect();
   }
@@ -358,7 +358,7 @@ public class BasicBoundFunctionITCase extends AbstractBaseTestITCase {
     connection.connect();
 
     assertEquals(HttpStatusCode.OK.getStatusCode(), connection.getResponseCode());
-    String content = IOUtils.toString(connection.getInputStream(), StandardCharsets.UTF_8);
+    String content = new String(connection.getInputStream().readAllBytes(), StandardCharsets.UTF_8);
     assertNotNull(content);
     connection.disconnect();
   }
