@@ -27,7 +27,6 @@ import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 
-import org.apache.commons.io.IOUtils;
 import org.sitenetsoft.olinguito.commons.api.data.Annotation;
 import org.sitenetsoft.olinguito.commons.api.data.ContextURL;
 import org.sitenetsoft.olinguito.commons.api.data.ContextURL.Suffix;
@@ -97,7 +96,7 @@ public class JsonDeltaSerializerWithNavigationsTest {
         EntityCollectionSerializerOptions.with()
         .contextURL(ContextURL.with().entitySet(edmEntitySet).build())
         .build()).getContent();
-       String jsonString = IOUtils.toString(stream, StandardCharsets.UTF_8);
+       String jsonString = new String(stream.readAllBytes(), StandardCharsets.UTF_8);
        final String expectedResult = "{"
            + "\"@context\":\"$metadata#ESDelta/$delta\",\"value\":[{"
            + "\"@context\":\"#ESDelta/$link\",\"source\":\"ESDelta(100)\",\"relationship\":\"NavPropertyETAllPrimOne\","
@@ -122,7 +121,7 @@ public class JsonDeltaSerializerWithNavigationsTest {
         EntityCollectionSerializerOptions.with()
         .contextURL(ContextURL.with().entitySet(edmEntitySet).build())
         .build()).getContent();
-       String jsonString = IOUtils.toString(stream, StandardCharsets.UTF_8);
+       String jsonString = new String(stream.readAllBytes(), StandardCharsets.UTF_8);
        final String expectedResult = "{"
            + "\"@context\":\"$metadata#ESDelta/$delta\",\"value\":[{"
            + "\"@context\":\"#ESDelta/$deletedLink\",\"source\":\"ESDelta(100)\","
@@ -151,7 +150,7 @@ public class JsonDeltaSerializerWithNavigationsTest {
         EntityCollectionSerializerOptions.with()
         .contextURL(ContextURL.with().entitySet(edmEntitySet).build())
         .build()).getContent();
-       String jsonString = IOUtils.toString(stream, StandardCharsets.UTF_8);
+       String jsonString = new String(stream.readAllBytes(), StandardCharsets.UTF_8);
        final String expectedResult = "{"
            + "\"@context\":\"$metadata#ESDelta/$delta\","
            + "\"value\":[{\"@context\":\"#ESDelta(100)/$deletedEntity\","
@@ -181,7 +180,7 @@ public class JsonDeltaSerializerWithNavigationsTest {
         EntityCollectionSerializerOptions.with()
         .contextURL(ContextURL.with().entitySet(edmEntitySet).build())
         .build()).getContent();
-       String jsonString = IOUtils.toString(stream, StandardCharsets.UTF_8);
+       String jsonString = new String(stream.readAllBytes(), StandardCharsets.UTF_8);
        final String expectedResult = "{"
            + "\"@context\":\"$metadata#ESDelta/$delta\",\"value\":[{"
            + "\"@id\":\"ESDelta(32767)\",\"PropertyInt16\":32767,"
@@ -236,7 +235,7 @@ public class JsonDeltaSerializerWithNavigationsTest {
         EntityCollectionSerializerOptions.with()
         .contextURL(ContextURL.with().entitySet(edmEntitySet).build())
         .build()).getContent();
-       String jsonString = IOUtils.toString(stream, StandardCharsets.UTF_8);
+       String jsonString = new String(stream.readAllBytes(), StandardCharsets.UTF_8);
        final String expectedResult = "{"
            + "\"@context\":\"$metadata#ESDelta/$delta\",\"value\":[{"
            + "\"@id\":\"ESDelta(32767)\",\"PropertyInt16\":32767,\"PropertyString\":\"Number:32767\"},"
@@ -266,7 +265,7 @@ public class JsonDeltaSerializerWithNavigationsTest {
         EntityCollectionSerializerOptions.with()
         .contextURL(ContextURL.with().entitySet(edmEntitySet2).build())
         .build()).getContent();
-       String jsonString = IOUtils.toString(stream, StandardCharsets.UTF_8);
+       String jsonString = new String(stream.readAllBytes(), StandardCharsets.UTF_8);
        final String expectedResult = "{"
          +"\"@context\":\"$metadata#ESDelta/$delta\",\"value\":[{"
          + "\"@context\":\"#ESAllPrim/$entity\",\"@id\":\"ESAllPrim(32767)\","
@@ -292,7 +291,7 @@ public class JsonDeltaSerializerWithNavigationsTest {
         EntityCollectionSerializerOptions.with()
         .contextURL(ContextURL.with().entitySet(edmEntitySet).build())
         .build()).getContent();
-       String jsonString = IOUtils.toString(stream, StandardCharsets.UTF_8);
+       String jsonString = new String(stream.readAllBytes(), StandardCharsets.UTF_8);
        final String expectedResult = "{"
            + "\"@context\":\"$metadata#ESDelta/$delta\",\"value\":[{"
            + "\"@context\":\"#ESDelta/$link\",\"source\":\"ESDelta(100)\","
@@ -320,7 +319,7 @@ public class JsonDeltaSerializerWithNavigationsTest {
         EntityCollectionSerializerOptions.with()
         .contextURL(ContextURL.with().entitySet(edmEntitySet).build())
         .build()).getContent();
-       String jsonString = IOUtils.toString(stream, StandardCharsets.UTF_8);
+       String jsonString = new String(stream.readAllBytes(), StandardCharsets.UTF_8);
        final String expectedResult = "{"
            + "\"@context\":\"$metadata#ESDelta/$delta\",\"value\":[{"
            + "\"@context\":\"#ESDelta/$link\",\"source\":\"ESDelta(100)\","
@@ -349,7 +348,7 @@ public class JsonDeltaSerializerWithNavigationsTest {
         EntityCollectionSerializerOptions.with()
         .contextURL(ContextURL.with().entitySet(edmEntitySet).build())
         .build()).getContent();
-       String jsonString = IOUtils.toString(stream, StandardCharsets.UTF_8);
+       String jsonString = new String(stream.readAllBytes(), StandardCharsets.UTF_8);
        final String expectedResult = "{"
            + "\"@context\":\"$metadata#ESDelta/$delta\",\"value\":[{"
            + "\"@context\":\"#ESDelta/$link\",\"source\":\"ESDelta(100)\","
@@ -382,7 +381,7 @@ public class JsonDeltaSerializerWithNavigationsTest {
         .contextURL(ContextURL.with().entitySet(edmEntitySet).build())
         .count(countOption)
         .build()).getContent();
-       String jsonString = IOUtils.toString(stream, StandardCharsets.UTF_8);
+       String jsonString = new String(stream.readAllBytes(), StandardCharsets.UTF_8);
        final String expectedResult = "{"
            + "\"@context\":\"$metadata#ESDelta/$delta\","
            + "\"@count\":\"1\","
@@ -404,7 +403,7 @@ public class JsonDeltaSerializerWithNavigationsTest {
         EntityCollectionSerializerOptions.with()
         .contextURL(ContextURL.with().entitySet(edmEntitySet).build())
         .build()).getContent();
-       String jsonString = IOUtils.toString(stream, StandardCharsets.UTF_8);
+       String jsonString = new String(stream.readAllBytes(), StandardCharsets.UTF_8);
        final String expectedResult = "{"
            + "\"@context\":\"$metadata#ESDelta/$delta\",\"value\":[]"
            + "}";
@@ -435,7 +434,7 @@ public class JsonDeltaSerializerWithNavigationsTest {
         EntityCollectionSerializerOptions.with()
         .contextURL(ContextURL.with().entitySet(edmEntitySet).build())
         .build()).getContent();
-       String jsonString = IOUtils.toString(stream, StandardCharsets.UTF_8);
+       String jsonString = new String(stream.readAllBytes(), StandardCharsets.UTF_8);
        final String expectedResult = "{"
            + "\"@context\":\"$metadata#ESDelta/$delta\","
            + "\"value\":[{\"@context\":\"#ESDelta(100)/$deletedEntity\","
@@ -469,7 +468,7 @@ public class JsonDeltaSerializerWithNavigationsTest {
         EntityCollectionSerializerOptions.with()
         .contextURL(ContextURL.with().entitySet(edmEntitySet).build())
         .build()).getContent();
-       String jsonString = IOUtils.toString(stream, StandardCharsets.UTF_8);
+       String jsonString = new String(stream.readAllBytes(), StandardCharsets.UTF_8);
        final String expectedResult = "{"
          +"\"@context\":\"$metadata#ESDelta/$delta\",\"value\":[{\"@context\":"
          + "\"#ESDelta(100)/$deletedEntity\",\"@removed\":{\"reason\":\"deleted\"},"
@@ -494,7 +493,7 @@ public class JsonDeltaSerializerWithNavigationsTest {
         EntityCollectionSerializerOptions.with()
         .contextURL(ContextURL.with().entitySet(edmEntitySet).build())
         .build()).getContent();
-       String jsonString = IOUtils.toString(stream, StandardCharsets.UTF_8);
+       String jsonString = new String(stream.readAllBytes(), StandardCharsets.UTF_8);
        final String expectedResult = "{"
            + "\"@context\":\"$metadata#ESWithStream/$delta\","
            + "\"value\":[{\"@context\":\"#ESWithStream/$link\","
@@ -524,7 +523,7 @@ public class JsonDeltaSerializerWithNavigationsTest {
         EntityCollectionSerializerOptions.with()
         .contextURL(ContextURL.with().entitySet(edmEntitySet).build()).expand(expand)
         .build()).getContent();
-       String jsonString = IOUtils.toString(stream, StandardCharsets.UTF_8);
+       String jsonString = new String(stream.readAllBytes(), StandardCharsets.UTF_8);
        final String expectedResult = "{"
          + "\"@context\":\"$metadata#ESDelta/$delta\",\"value\":"
          + "[{\"@id\":\"ESDelta(32767)\",\"PropertyInt16\":32767,\"PropertyString\":\"Number:32767\","
@@ -570,7 +569,7 @@ public class JsonDeltaSerializerWithNavigationsTest {
         EntityCollectionSerializerOptions.with()
         .contextURL(ContextURL.with().entitySet(edmEntitySet).build()).expand(expand)
         .isFullRepresentation(true).build()).getContent();
-       String jsonString = IOUtils.toString(stream, StandardCharsets.UTF_8);
+       String jsonString = new String(stream.readAllBytes(), StandardCharsets.UTF_8);
        final String expectedResult = "{"
          + "\"@context\":\"$metadata#ESDelta/$delta\",\"value\":"
          + "[{\"@id\":\"ESDelta(32767)\",\"PropertyInt16\":32767,\"PropertyString\":\"Number:32767\","
@@ -624,7 +623,7 @@ public class JsonDeltaSerializerWithNavigationsTest {
         EntityCollectionSerializerOptions.with()
         .contextURL(ContextURL.with().entitySet(edmEntitySet).build()).expand(expand)
         .build()).getContent();
-       String jsonString = IOUtils.toString(stream, StandardCharsets.UTF_8);
+       String jsonString = new String(stream.readAllBytes(), StandardCharsets.UTF_8);
        final String expectedResult = "{"
          +  "\"@context\":\"$metadata#ESDelta/$delta\",\"value\":"
          + "[{\"@id\":\"ESDelta(32767)\",\"NavPropertyETAllPrimMany@delta\":"
@@ -655,7 +654,7 @@ public class JsonDeltaSerializerWithNavigationsTest {
            .contextURL(ContextURL.with().entitySet(edmEntitySet)
                .selectList(helper.buildContextURLSelectList(entityType, expand, select)).build()).expand(expand)
            .build()).getContent();
-          String jsonString = IOUtils.toString(stream, StandardCharsets.UTF_8);
+          String jsonString = new String(stream.readAllBytes(), StandardCharsets.UTF_8);
     Assertions.assertEquals("{"
         + "\"@context\":\"$metadata#ESDelta(PropertyInt16,PropertyString,NavPropertyETAllPrimOne("
         + "PropertyInt16,PropertyString))/$delta\","
@@ -690,7 +689,7 @@ public class JsonDeltaSerializerWithNavigationsTest {
                .selectList(helper.buildContextURLSelectList(entityType, null, select))
                .suffix(Suffix.ENTITY).build())
            .select(select).build()).getContent();
-          String jsonString = IOUtils.toString(stream, StandardCharsets.UTF_8);
+          String jsonString = new String(stream.readAllBytes(), StandardCharsets.UTF_8);
     Assertions.assertEquals("{"
         +"\"@context\":\"$metadata#ESDelta(PropertyInt16,PropertyString)/$entity/$delta\","
         + "\"value\":[{\"@id\":\"ESDelta(32767)\",\"PropertyString\":\"Number:32767\"},"
@@ -717,7 +716,7 @@ public class JsonDeltaSerializerWithNavigationsTest {
         EntityCollectionSerializerOptions.with()
         .contextURL(ContextURL.with().entitySet(edmEntitySet).build())
         .build()).getContent();
-       String jsonString = IOUtils.toString(stream, StandardCharsets.UTF_8);
+       String jsonString = new String(stream.readAllBytes(), StandardCharsets.UTF_8);
        final String expectedResult = "{"
            +  "\"@context\":\"$metadata#ESCollAllPrim/$delta\",\"value\":"
            + "[{\"@id\":\"ESCollAllPrim(1)\",\"PropertyInt16\":1,\"CollPropertyString\":"
@@ -766,7 +765,7 @@ public class JsonDeltaSerializerWithNavigationsTest {
         EntityCollectionSerializerOptions.with()
         .contextURL(ContextURL.with().entitySet(edmEntitySet).build())
         .build()).getContent();
-       String jsonString = IOUtils.toString(stream, StandardCharsets.UTF_8);
+       String jsonString = new String(stream.readAllBytes(), StandardCharsets.UTF_8);
        final String expectedResult = "{"
            +  "\"@context\":\"$metadata#ESBaseTwoKeyNav/$delta\","
            + "\"value\":[{\"@id\":\"ESBaseTwoKeyNav(PropertyInt16=1,PropertyString='1')\","
@@ -816,7 +815,7 @@ public class JsonDeltaSerializerWithNavigationsTest {
         EntityCollectionSerializerOptions.with()
         .contextURL(ContextURL.with().entitySet(edmEntitySet).build())
         .build()).getContent();
-       String jsonString = IOUtils.toString(stream, StandardCharsets.UTF_8);
+       String jsonString = new String(stream.readAllBytes(), StandardCharsets.UTF_8);
        final String expectedResult = "{"
          +  "\"@context\":\"$metadata#ESKeyNav/$delta\","
          + "\"value\":[{\"@id\":\"ESKeyNav(1)\",\"PropertyInt16\":1,"
@@ -885,7 +884,7 @@ public class JsonDeltaSerializerWithNavigationsTest {
         EntityCollectionSerializerOptions.with()
         .contextURL(ContextURL.with().entitySet(edmEntitySet).build()).expand(expand)
         .build()).getContent();
-       String jsonString = IOUtils.toString(stream, StandardCharsets.UTF_8);
+       String jsonString = new String(stream.readAllBytes(), StandardCharsets.UTF_8);
        final String expectedResult = "{"
            + "\"@context\":\"$metadata#ESDelta/$delta\",\"value\":[{\"@id\":\"ESDelta(32767)\","
            + "\"PropertyInt16\":32767,\"PropertyString\":\"Number:32767\",\"NavPropertyETAllPrimOne\":null},"
@@ -924,7 +923,7 @@ public class JsonDeltaSerializerWithNavigationsTest {
         .contextURL(ContextURL.with().entitySet(edmEntitySet).build()).expand(expand)
         .isFullRepresentation(true)
         .build()).getContent();
-       String jsonString = IOUtils.toString(stream, StandardCharsets.UTF_8);
+       String jsonString = new String(stream.readAllBytes(), StandardCharsets.UTF_8);
        final String expectedResult = "{"
            + "\"@context\":\"$metadata#ESDelta/$delta\",\"value\":[{\"@id\":\"ESDelta(32767)\","
            + "\"PropertyInt16\":32767,\"PropertyString\":\"Number:32767\",\"NavPropertyETAllPrimOne\":null},"
@@ -1083,7 +1082,7 @@ public class JsonDeltaSerializerWithNavigationsTest {
         EntityCollectionSerializerOptions.with()
         .contextURL(ContextURL.with().entitySet(edmEntitySet).build())
         .build()).getContent();
-       String jsonString = IOUtils.toString(stream, StandardCharsets.UTF_8);
+       String jsonString = new String(stream.readAllBytes(), StandardCharsets.UTF_8);
        final String expectedResult = "{"
            + "\"@context\":\"$metadata#ESDelta/$delta\",\"value\":[{"
            + "\"@context\":\"#ESDelta/$link\",\"source\":\"ESDelta(100)\","
@@ -1109,7 +1108,7 @@ public class JsonDeltaSerializerWithNavigationsTest {
         EntityCollectionSerializerOptions.with()
         .contextURL(ContextURL.with().entitySet(edmEntitySet).build()).expand(expand)
         .isFullRepresentation(true).build()).getContent();
-       String jsonString = IOUtils.toString(stream, StandardCharsets.UTF_8);
+       String jsonString = new String(stream.readAllBytes(), StandardCharsets.UTF_8);
        final String expectedResult = "{\"@context\":\"$metadata#ESDelta/$delta\","
            + "\"value\":[{\"@id\":\"ESDelta(0)\",\"PropertyInt16\":0,"
            + "\"PropertyString\":\"Number:0\",\"NavPropertyETAllPrimMany\":[]}]}";
@@ -1131,7 +1130,7 @@ public class JsonDeltaSerializerWithNavigationsTest {
         EntityCollectionSerializerOptions.with()
         .contextURL(ContextURL.with().entitySet(edmEntitySet).build()).expand(expand)
         .isFullRepresentation(true).build()).getContent();
-       String jsonString = IOUtils.toString(stream, StandardCharsets.UTF_8);
+       String jsonString = new String(stream.readAllBytes(), StandardCharsets.UTF_8);
        final String expectedResult = "{\"@context\":\"$metadata#ESDelta/$delta\","
            + "\"value\":[{\"@id\":\"ESDelta(-32768)\",\"PropertyInt16\":-32768,"
            + "\"PropertyString\":\"Number:-32768\",\"NavPropertyETAllPrimOne\":null}]}";
@@ -1153,7 +1152,7 @@ public class JsonDeltaSerializerWithNavigationsTest {
         EntityCollectionSerializerOptions.with()
         .contextURL(ContextURL.with().entitySet(edmEntitySet).build()).expand(expand)
         .isFullRepresentation(true).build()).getContent();
-       String jsonString = IOUtils.toString(stream, StandardCharsets.UTF_8);
+       String jsonString = new String(stream.readAllBytes(), StandardCharsets.UTF_8);
        final String expectedResult = "{\"@context\":\"$metadata#ESDelta/$delta\","
            + "\"value\":[{\"@id\":\"ESDelta(-1)\",\"PropertyInt16\":-1,"
            + "\"PropertyString\":\"Number:-1\",\"NavPropertyETAllPrimOne\":null}]}";
@@ -1175,7 +1174,7 @@ public class JsonDeltaSerializerWithNavigationsTest {
         EntityCollectionSerializerOptions.with()
         .contextURL(ContextURL.with().entitySet(edmEntitySet).build()).expand(expand)
         .isFullRepresentation(true).build()).getContent();
-       String jsonString = IOUtils.toString(stream, StandardCharsets.UTF_8);
+       String jsonString = new String(stream.readAllBytes(), StandardCharsets.UTF_8);
        final String expectedResult = "{\"@context\":\"$metadata#ESDelta/$delta\","
            + "\"value\":[{\"@id\":\"ESDelta(-1)\",\"PropertyInt16\":-1,"
            + "\"PropertyString\":\"Number:-1\",\"NavPropertyETAllPrimMany\":[]}]}";
@@ -1202,7 +1201,7 @@ public class JsonDeltaSerializerWithNavigationsTest {
         EntityCollectionSerializerOptions.with()
         .contextURL(ContextURL.with().entitySet(edmEntitySet).build()).expand(expand)
         .build()).getContent();
-       String jsonString = IOUtils.toString(stream, StandardCharsets.UTF_8);
+       String jsonString = new String(stream.readAllBytes(), StandardCharsets.UTF_8);
        final String expectedResult = "{\"@context\":\"$metadata#ESDelta/$delta\","
            + "\"value\":[{\"@id\":\"ESDelta(32767)\",\"PropertyInt16\":32767,"
            + "\"PropertyString\":\"Number:32767\","
@@ -1234,7 +1233,7 @@ public class JsonDeltaSerializerWithNavigationsTest {
         EntityCollectionSerializerOptions.with()
         .contextURL(ContextURL.with().entitySet(edmEntitySet).build()).expand(expand)
         .build()).getContent();
-       String jsonString = IOUtils.toString(stream, StandardCharsets.UTF_8);
+       String jsonString = new String(stream.readAllBytes(), StandardCharsets.UTF_8);
        final String expectedResult = "{\"@context\":\"$metadata#ESDelta/$delta\","
            + "\"value\":[{\"@id\":\"ESDelta(-32768)\",\"PropertyInt16\":-32768,"
            + "\"PropertyString\":\"Number:-32768\","
